force-app/main/default/objects/Invoice__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>