force-app/main/default/objects/Invoice__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>if(LEN(Customer_Name__r.BillingStreet)&gt;0, Customer_Name__r.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Customer_Name__r.BillingCity)&gt;0, &quot; &quot; &amp;Customer_Name__r.BillingCity&amp; &quot; &quot; , &quot;&quot; ) &amp;
if(LEN(Customer_Name__r.BillingState)&gt;0, &quot; &quot; &amp; Customer_Name__r.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Customer_Name__r.BillingPostalCode)&gt;0, &quot; &quot; &amp; Customer_Name__r.BillingPostalCode &amp; &quot; &quot;,&quot; &quot;) &amp; BR() &amp;
If(LEN( Customer_Name__r.BillingCountry ) &gt;0,&quot; &quot; &amp; Customer_Name__r.BillingCountry ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>