force-app/main/default/objects/Invoice__c/fields/Billing_GSTIN_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_GSTIN_No__c</fullName>
    <formula>Customer_Name__r.GSTIN_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing GSTIN No.</label>
    <type>Text</type>
</CustomField>