force-app/main/default/objects/Invoice__c/fields/Billing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Code__c</fullName>
    <formula>Customer_Name__r.Billing_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State Code</label>
    <type>Text</type>
</CustomField>