force-app/main/default/objects/Invoice__c/fields/Billing_State_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Country__c</fullName>
    <formula>Customer_Name__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State/ Country</label>
    <type>Text</type>
</CustomField>