force-app/main/default/objects/Invoice__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <formula>Contact_Person__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact No.</label>
    <type>Text</type>
</CustomField>