force-app/main/default/objects/Invoice__c/fields/Date_Of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Supply__c</fullName>
    <label>Date Of Supply</label>
    <type>Date</type>
</CustomField>