force-app/main/default/objects/Invoice__c/fields/DC_Date__c.field-meta.xml
<CustomField>
    <fullName>DC_Date__c</fullName>
    <formula>DC_No__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DC Date</label>
    <type>Date</type>
</CustomField>