force-app/main/default/objects/Invoice__c/fields/DC_No__c.field-meta.xml
<CustomField>
    <fullName>DC_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DC  No.</label>
    <referenceTo>Sales_Order_Dispatch_Delivery_Note__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>