force-app/main/default/objects/Invoice__c/fields/E_way_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>E_way_Bill_No__c</fullName>
    <label>E-way Bill No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>