force-app/main/default/objects/Invoice__c/fields/ESN__c.field-meta.xml
<CustomField>
    <fullName>ESN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ESN</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Invoices (ESN)</relationshipLabel>
    <relationshipName>Invoice1</relationshipName>
    <type>Lookup</type>
</CustomField>