force-app/main/default/objects/Invoice__c/fields/Export_Type__c.field-meta.xml
<CustomField>
    <fullName>Export_Type__c</fullName>
    <label>Export Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply meant for SEZ/SEZ Developer under LUT without payment of Integrated Tax</fullName>
            </value>
            <value>
                <fullName>Supply meant for SEZ Unit/SEZ Developer with payment of Integrated Tax</fullName>
            </value>
            <value>
                <fullName>Supply meant for SEZ/SEZ Developer under Bond without payment of Integrated Tax</fullName>
            </value>
            <value>
                <fullName>Supply meant for Export on payment of IGST</fullName>
            </value>
            <value>
                <fullName>Supply meant for Export under Letter of Undertaking without payment of IGST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>