force-app/main/default/objects/Invoice__c/fields/LC_Date__c.field-meta.xml
<CustomField>
    <fullName>LC_Date__c</fullName>
    <label>LC Date</label>
    <type>Date</type>
</CustomField>