force-app/main/default/objects/Invoice__c/fields/Original_for_Receipient__c.field-meta.xml
<CustomField>
    <fullName>Original_for_Receipient__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Original for Receipient</label>
    <type>Checkbox</type>
</CustomField>