force-app/main/default/objects/Invoice__c/fields/Place_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Supply__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales From</label>
    <referenceTo>Ware_House__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>