force-app/main/default/objects/Invoice__c/fields/Place_of_Supply_Formula__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Supply_Formula__c</fullName>
    <formula>Shipping_State_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Supply Formula</label>
    <type>Text</type>
</CustomField>