force-app/main/default/objects/Invoice__c/fields/PO_No__c.field-meta.xml
<CustomField>
    <fullName>PO_No__c</fullName>
    <label>PO No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>