force-app/main/default/objects/Invoice__c/fields/Remarks_Note__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Note__c</fullName>
    <label>Remarks/Note</label>
    <type>TextArea</type>
</CustomField>