force-app/main/default/objects/Invoice__c/fields/Reverse_Charge__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Charge__c</fullName>
    <label>Reverse Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>