force-app/main/default/objects/Invoice__c/fields/Shipping_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Code__c</fullName>
    <formula>Customer_Name__r.Shipping_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State Code</label>
    <type>Text</type>
</CustomField>