force-app/main/default/objects/Invoice__c/fields/Shipping_State_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Country__c</fullName>
    <formula>Customer_Name__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State/ Country</label>
    <type>Text</type>
</CustomField>