force-app/main/default/objects/Invoice__c/fields/Triplicate_for_supplier__c.field-meta.xml
<CustomField>
    <fullName>Triplicate_for_supplier__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Triplicate for supplier</label>
    <type>Checkbox</type>
</CustomField>