force-app/main/default/objects/Invoice__c/recordTypes/Service_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Service_Invoice</fullName>
    <active>true</active>
    <label>Service  Invoice</label>
</RecordType>