force-app/main/default/objects/Invoice__c/recordTypes/Tax_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Tax_Invoice</fullName>
    <active>true</active>
    <label>Tax Invoice</label>
</RecordType>