force-app/main/default/objects/Invoice__c/listViews/Service_Invoices.listView-meta.xml
<ListView>
    <fullName>Service_Invoices</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Contact_Person__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <label>Service Invoices</label>
    <sharedTo>
        <group>East_Parts_Team</group>
        <group>North_Parts_Team</group>
    </sharedTo>
</ListView>